--- a/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
@@ -29,7 +29,7 @@
                 <li><a><i class="fa fa-edit"></i> Devis <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="{{ app.request.getBaseURL() }}/devis/new">Créer un devis</a></li>
-                        <li><a href="#">Modifier un devis</a></li>
+                        <li><a href="{{ app.request.getBaseURL() }}/devis/">Rechercher un devis</a></li>
                         <li><a href="#">Envoyer un devis</a></li>
                     </ul>
                 </li>
