--- a/src/BackOfficeBundle/Resources/views/Devis/generationDevis.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Devis/generationDevis.html.twig
@@ -8,7 +8,7 @@
 
 <body>
 
-            <img src="{{ absolute_url(asset('images/logo.png')) }}" height="90px">
+            <img src='{{ absolute_url(asset('images/logo.png')) }}' height='90px'>
         <div class="info">
             <div class="info-devis">
                 <img src="{{ absolute_url(asset('images/imgDevis.png')) }}" height="50px"><br/>
