--- a/src/BackOfficeBundle/Resources/views/Devis/listeDevis.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Devis/listeDevis.html.twig
@@ -22,7 +22,7 @@
                     <div class="">
                         <div class="page-title">
                             <div class="title_left">
-                                <h3>Client</h3>
+                                <h3>Devis</h3>
                             </div>
                         </div>
 
@@ -32,7 +32,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="x_panel">
                                     <div class="x_title">
-                                        <h2>Rechercher un Client</h2>
+                                        <h2>Rechercher un Devis</h2>
                                         <ul class="nav navbar-right panel_toolbox">
                                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                             </li>
@@ -43,8 +43,8 @@
                                     </div>
                                     <div class="x_content">
                                         <p class="text-muted font-13 m-b-30 pull-right">
-                                            <a href="{{ app.request.getBaseURL() }}/client/new"><button type="button" class="btn btn-success"><span class="fa fa-plus-circle"></span>
-                                                    Ajouté un client</button></a>
+                                            <a href="{{ app.request.getBaseURL() }}/devis/new"><button type="button" class="btn btn-success"><span class="fa fa-plus-circle"></span>
+                                                    Ajouté un devis</button></a>
                                         </p>
                                         <table id="datatable" class="table table-striped table-bordered">
                                             <thead>
@@ -68,7 +68,7 @@
                                                     <td>{{ leDevis.prixTTC }}</td>
                                                     <td>
                                                         <a href="{{ app.request.getBaseURL() }}/devis/{{ leDevis.id }}/view"><button class="btn btn-info btn-sm"><span class="fa fa-eye"></span> Visualiser</button></a>
-                                                        <a href="{{ app.request.getBaseURL() }}/devis/{{ leDevis.id }}/edit"><button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button></a>
+                                                            <a href="{{ app.request.getBaseURL() }}/devis/{{ leDevis.id }}/edit"><button class="btn btn-warning btn-sm"><span class="fa fa-edit"></span> Editer</button></a>
                                                         {{ form_start(delete_forms[leDevis.id], {attr: {style: 'display:inline','onclick': 'return confirm("Es-tu sur de vouloir supprimer le devis ?")'}}) }}
                                                         <button class="btn btn-danger btn-sm"><span class="fa fa-times-circle"></span> Supprimer</button>
                                                         {{ form_end(delete_forms[leDevis.id]) }}
