--- a/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Layout/menu.html.twig
@@ -1,6 +1,6 @@
 <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
-        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Pascal Devis</span></a>
+        <a href="{{ app.request.getBaseURL() }}/" class="site_title"><i class="fa fa-paw"></i> <span>Pascal Devis</span></a>
     </div>
 
     <div class="clearfix"></div>
